Changes in structure of how Task is handled and also implemented the assigning users of task
