# src/dto/task/TaskRequest.dto.ts
@@ -34,8 +34,11 @@ export class TaskRequest {
   @Example(12.5)
   estimatedHours?: number;
 
-  @Example("c289f43e-89de-42ef-8e1a-35a222d1ac12")
-  assignedToUid?: string;
+  @Example([
+    "c289f43e-89de-42ef-8e1a-35a222d1ac12",
+    "ef732123-aaaa-4e10-998b-bbbbc456def0",
+  ])
+  assignedToUsers?: string[];
 
   @Example("c289f43e-89de-42ef-8e1a-35a222d1ac12")
   projectUid!: string;
